XDebug Coverage only

--- a/docker-lsphp/php.d/99-xdebug.ini
+++ b/docker-lsphp/php.d/99-xdebug.ini
@@ -1,6 +1,6 @@
 ; Enable xdebug extension module
 zend_extension=xdebug.so
-xdebug.mode=develop,coverage,debug,profile
+xdebug.mode=coverage
 xdebug.idekey=docker
 xdebug.start_with_request=yes
 xdebug.log=/dev/stdout
