Cache headers respected

--- a/docker-base/lsws-conf/httpd_config.conf
+++ b/docker-base/lsws-conf/httpd_config.conf
@@ -36,8 +36,8 @@ accessLog logs/main.log {
 }
     
 expires {
-    enableExpires           1
-    expiresByType           image/*=A604800,text/css=A604800,application/x-javascript=A604800,application/javascript=A604800,font/*=A604800,application/x-font-ttf=A604800
+    enableExpires           0
+    expiresDefault          A31557600
 }
 
 tuning{
