--- a/docker-base/lsws-conf/templates/docker.conf
+++ b/docker-base/lsws-conf/templates/docker.conf
@@ -22,7 +22,7 @@ virtualHostConfig  {
   }
 
   expires  {
-    enableExpires         1
+    useServer             1
   }
 
   accessControl  {
@@ -36,6 +36,11 @@ virtualHostConfig  {
     rewrite  {
 RewriteFile .htaccess
     }
+
+    extraHeaders          <<<END_extraHeaders
+        unset Cache-control
+        set Cache-control public, max-age=15552000
+    END_extraHeaders
   }
 
   rewrite  {
