Revert "Unset extra headers"
This reverts commit 1513950d9803448304b63a30f2169d66769bf0e0.

--- a/docker-base/lsws-conf/templates/docker.conf
+++ b/docker-base/lsws-conf/templates/docker.conf
@@ -36,6 +36,11 @@ virtualHostConfig  {
     rewrite  {
 RewriteFile .htaccess
     }
+
+    extraHeaders          <<<END_extraHeaders
+        unset Cache-control
+        set Cache-control public, max-age=15552000
+    END_extraHeaders
   }
 
   rewrite  {
