Add storage pth

--- a/docker-base/lsws-conf/httpd_config.conf
+++ b/docker-base/lsws-conf/httpd_config.conf
@@ -208,6 +208,7 @@ nodeDefaults{
 module cache {
     ls_enabled          1
 
+    storagePath         /tmp
     checkPrivateCache   1
     checkPublicCache    1
     maxCacheObjSize     10000000
