Context build without htaccess

--- a/docker-base/lsws-conf/templates/docker.conf
+++ b/docker-base/lsws-conf/templates/docker.conf
@@ -38,6 +38,11 @@ RewriteFile .htaccess
     }
   }
 
+  context /build {
+    location              $VH_ROOT/public/build
+    allowBrowse           1
+  }
+
   rewrite  {
     enable                1
     autoLoadHtaccess      1    
