Change docroot to public, still link html for compat

--- a/docker-base/lsws-conf/templates/docker.conf
+++ b/docker-base/lsws-conf/templates/docker.conf
@@ -6,7 +6,7 @@ vhRoot 	/var/www/vhosts/$VH_NAME/
 configFile $SERVER_ROOT/conf/vhosts/$VH_NAME/vhconf.conf
 
 virtualHostConfig  {
-  docRoot                 $VH_ROOT/html/
+  docRoot                 $VH_ROOT/public/
   enableGzip              1
 
   errorlog  {
