Add static listeners

--- a/docker-base/lsws-conf/httpd_config.conf
+++ b/docker-base/lsws-conf/httpd_config.conf
@@ -231,10 +231,25 @@ listener HTTP {
   secure                  0
 }
 
+listener STATIC {
+  address                 *:8080
+  secure                  0
+}
+
 vhTemplate docker {
   templateFile            conf/templates/docker.conf
   listeners               HTTP
   note                    docker
+
+  member localhost {
+    vhDomain              localhost, *
+  }
+}
+
+vhTemplate static {
+  templateFile            conf/templates/static.conf
+  listeners               STATIC
+  note                    static files
 
   member localhost {
     vhDomain              localhost, *
