--- a/docker-base/lsws-conf/templates/static.conf
+++ b/docker-base/lsws-conf/templates/static.conf
@@ -33,14 +33,31 @@ virtualHostConfig  {
     location              $DOC_ROOT/
     allowBrowse           1
 
-    rewrite  {
-RewriteFile .htaccess
+    module cache {
+        ls_enabled          1
+
+        storagePath         /tmp
+        checkPrivateCache   1
+        checkPublicCache    1
+        maxCacheObjSize     10000000
+        maxStaleAge         200
+        qsCache             1
+        reqCookieCache      1
+        respCookieCache     1
+        ignoreReqCacheCtrl  1
+        ignoreRespCacheCtrl 0
+
+        enableCache         1
+        expireInSeconds     3600
+        enablePrivateCache  1
+        privateExpireInSeconds 3600
+
     }
   }
 
   rewrite  {
-    enable                1
-    autoLoadHtaccess      1    
+    enable                0
+    autoLoadHtaccess      0    
     logLevel              0
   }
 
