--- a/docker-base/lsws-conf/templates/docker.conf
+++ b/docker-base/lsws-conf/templates/docker.conf
@@ -38,6 +38,58 @@ RewriteFile .htaccess
     }
   }
 
+  context /build/ {
+    location              $DOC_ROOT/build/
+    allowBrowse           1
+
+    module cache {
+        ls_enabled          1
+
+        storagePath         /tmp
+        checkPrivateCache   1
+        checkPublicCache    1
+        maxCacheObjSize     10000000
+        maxStaleAge         200
+        qsCache             1
+        reqCookieCache      1
+        respCookieCache     1
+        ignoreReqCacheCtrl  1
+        ignoreRespCacheCtrl 0
+
+        enableCache         1
+        expireInSeconds     3600
+        enablePrivateCache  1
+        privateExpireInSeconds 3600
+
+    }
+  }
+
+  context /build/assets/ {
+    location              $DOC_ROOT/build/assets/
+    allowBrowse           1
+
+    module cache {
+        ls_enabled          1
+
+        storagePath         /tmp
+        checkPrivateCache   1
+        checkPublicCache    1
+        maxCacheObjSize     10000000
+        maxStaleAge         200
+        qsCache             1
+        reqCookieCache      1
+        respCookieCache     1
+        ignoreReqCacheCtrl  1
+        ignoreRespCacheCtrl 0
+
+        enableCache         1
+        expireInSeconds     3600
+        enablePrivateCache  1
+        privateExpireInSeconds 3600
+
+    }
+  }
+
   rewrite  {
     enable                1
     autoLoadHtaccess      1    
