More consistent webserver

--- a/docker-base/lsws-conf/httpd_config.conf
+++ b/docker-base/lsws-conf/httpd_config.conf
@@ -208,7 +208,6 @@ nodeDefaults{
 module cache {
     ls_enabled          1
 
-    storagePath         /tmp
     checkPrivateCache   1
     checkPublicCache    1
     maxCacheObjSize     10000000
@@ -226,34 +225,34 @@ module cache {
 
 }
 
+virtualHost docker{
+    vhRoot                   /var/www/vhosts/localhost
+    allowSymbolLink          1
+    enableScript             1
+    restrained               1
+    setUIDMode               2
+    configFile               conf/vhosts/docker/vhconf.conf
+}
+
+virtualHost static{
+    vhRoot                   /var/www/vhosts/localhost
+    allowSymbolLink          1
+    enableScript             0
+    restrained               1
+    setUIDMode               2
+    configFile               conf/vhosts/static/vhconf.conf
+}
+
 listener HTTP {
   address                 *:80
   secure                  0
+  map                     docker *
 }
 
 listener STATIC {
   address                 *:8080
   secure                  0
-}
-
-vhTemplate docker {
-  templateFile            conf/templates/docker.conf
-  listeners               HTTP
-  note                    docker
-
-  member localhost {
-    vhDomain              localhost, *
-  }
-}
-
-vhTemplate static {
-  templateFile            conf/templates/static.conf
-  listeners               STATIC
-  note                    static files
-
-  member localhost {
-    vhDomain              localhost, *
-  }
+  map                     static *
 }
 
 
