add caching to static vhosts

--- a/docker-base/lsws-conf/httpd_config.conf
+++ b/docker-base/lsws-conf/httpd_config.conf
@@ -241,6 +241,26 @@ virtualHost static{
     restrained               1
     setUIDMode               2
     configFile               conf/vhosts/static/vhconf.conf
+
+    module cache {
+        ls_enabled          1
+
+        checkPrivateCache   1
+        checkPublicCache    1
+        maxCacheObjSize     10000000
+        maxStaleAge         0
+        qsCache             1
+        reqCookieCache      1
+        respCookieCache     1
+        ignoreReqCacheCtrl  1
+        ignoreRespCacheCtrl 0
+
+        enableCache         1
+        expireInSeconds     31557600
+        enablePrivateCache  1
+        privateExpireInSeconds 31557600
+
+    }
 }
 
 listener HTTP {
