Updated lsphp versions

--- a/.github/workflows/image-build.yaml
+++ b/.github/workflows/image-build.yaml
@@ -93,7 +93,7 @@ jobs:
       matrix:
         php_version:
           - version: 8.3
-            php_detail_version: 8.3.8
+            php_detail_version: 8.3.14
             lsphp_version: lsphp83
             php_tag_version: latest
             oci_version: 3.4.0
@@ -101,7 +101,7 @@ jobs:
             xdebug_version: 3.3.2
             deprecated: false
           - version: 8.3
-            php_detail_version: 8.3.8
+            php_detail_version: 8.3.14
             lsphp_version: lsphp83
             php_tag_version: php83
             oci_version: 3.4.0
@@ -109,7 +109,7 @@ jobs:
             xdebug_version: 3.3.2
             deprecated: false
           - version: 8.2
-            php_detail_version: 8.2.20
+            php_detail_version: 8.2.26
             lsphp_version: lsphp82
             php_tag_version: php82
             oci_version: 3.4.0
@@ -117,9 +117,17 @@ jobs:
             xdebug_version: 3.3.2
             deprecated: false
           - version: 8.1
-            php_detail_version: 8.1.29
+            php_detail_version: 8.1.31
             lsphp_version: lsphp81
             php_tag_version: php81
+            oci_version: 3.2.1
+            swoole_version: 5.1.5
+            xdebug_version: 3.3.2
+            deprecated: true
+          - version: 8.0
+            php_detail_version: 8.0.30
+            lsphp_version: lsphp80
+            php_tag_version: php80
             oci_version: 3.2.1
             swoole_version: 5.1.5
             xdebug_version: 3.3.2
