--- a/docker-base/Dockerfile
+++ b/docker-base/Dockerfile
@@ -4,6 +4,7 @@ RUN apt-get update && apt-get upgrade -y && apt-get autoremove -y && apt-get ins
     wget -O - https://repo.litespeed.sh | bash && \
     apt-get autoclean -y && \
     rm /entrypoint.sh || true && \
+    apt-get install -y openlitespeed && \
     /usr/local/lsws/admin/misc/lsup.sh && \
     mv /usr/local/lsws/conf /usr/local/lsws/conf-disabled
 
