Fixed libaio libs

--- a/docker-lsphp/Dockerfile
+++ b/docker-lsphp/Dockerfile
@@ -150,7 +150,7 @@ ARG ORACLE_ZIP_DIR=instantclient_21_15
 ARG OCI_VERSION=3.4.0
 
 # Install Oracle Instant Client
-RUN apt-get install -y libaio-dev libaio1t64 unzip && mkdir -p /usr/oracle && \
+RUN apt-get install -y libaio-dev libaio1 unzip && mkdir -p /usr/oracle && \
     curl https://download.oracle.com/otn_software/linux/instantclient/${ORACLE_SIMPLE_VERSION}/instantclient-basic-linux.x64-${ORACLE_VERSION}dbru.zip --output /usr/oracle/oic.zip && \
     curl https://download.oracle.com/otn_software/linux/instantclient/${ORACLE_SIMPLE_VERSION}/instantclient-sdk-linux.x64-${ORACLE_VERSION}dbru.zip --output /usr/oracle/sdk.zip && \
     cd /usr/oracle && \
@@ -158,7 +158,6 @@ RUN apt-get install -y libaio-dev libaio1t64 unzip && mkdir -p /usr/oracle && \
     unzip sdk.zip && \
     rm -f oic.zip && \
     rm -f sdk.zip && \
-    ln -s /usr/lib/x86_64-linux-gnu/libaio.so.1t64 /usr/lib/x86_64-linux-gnu/libaio.so.1 && \
     apt-get autoclean -y
 
 ENV LD_LIBRARY_PATH=/usr/oracle/${ORACLE_ZIP_DIR}
