--- a/.github/workflows/image-build.yaml
+++ b/.github/workflows/image-build.yaml
@@ -96,31 +96,37 @@ jobs:
             php_detail_version: 8.3.14
             lsphp_version: lsphp83
             php_tag_version: latest
+            oci_version: 3.4.0
             deprecated: false
           - version: 8.3
             php_detail_version: 8.3.14
             lsphp_version: lsphp83
             php_tag_version: php83
+            oci_version: 3.4.0
             deprecated: false
           - version: 8.2
             php_detail_version: 8.2.26
             lsphp_version: lsphp82
             php_tag_version: php82
+            oci_version: 3.4.0
             deprecated: false
           - version: 8.1
             php_detail_version: 8.1.31
             lsphp_version: lsphp81
             php_tag_version: php81
+            oci_version: 3.2.1
             deprecated: true
           - version: 8.0
             php_detail_version: 8.0.30
             lsphp_version: lsphp80
             php_tag_version: php80
+            oci_version: 3.0.1
             deprecated: true
           - version: 7.4
             php_detail_version: 7.4.33
             lsphp_version: lsphp74
             php_tag_version: php74
+            oci_version: 2.2.0
             deprecated: true
         php_extensions:
           - name: "base"
@@ -179,8 +185,9 @@ jobs:
           target: ${{ matrix.php_extensions.name }}
           build-args: |
             BASEIMAGE=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:base
+            LS_VERSION=${{ matrix.php_version.lsphp_version }}
             PHP_VERSION=${{ matrix.php_version.version }}
             PHP_DETAIL_VERSION=${{ matrix.php_version.php_detail_version }}
-            LS_VERSION=${{ matrix.php_version.lsphp_version }}
+            OCI_VERSION=${{ matrix.php_version.oci_version }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
