--- a/.github/workflows/image-build.yaml
+++ b/.github/workflows/image-build.yaml
@@ -97,36 +97,42 @@ jobs:
             lsphp_version: lsphp83
             php_tag_version: latest
             oci_version: 3.4.0
+            pdo_oci_version: 1.1.0
             deprecated: false
           - version: 8.3
             php_detail_version: 8.3.14
             lsphp_version: lsphp83
             php_tag_version: php83
             oci_version: 3.4.0
+            pdo_oci_version: 1.0
             deprecated: false
           - version: 8.2
             php_detail_version: 8.2.26
             lsphp_version: lsphp82
             php_tag_version: php82
             oci_version: 3.4.0
+            pdo_oci_version: 1.0
             deprecated: false
           - version: 8.1
             php_detail_version: 8.1.31
             lsphp_version: lsphp81
             php_tag_version: php81
             oci_version: 3.2.1
+            pdo_oci_version: 1.0
             deprecated: true
           - version: 8.0
             php_detail_version: 8.0.30
             lsphp_version: lsphp80
             php_tag_version: php80
             oci_version: 3.0.1
+            pdo_oci_version: 1.0
             deprecated: true
           - version: 7.4
             php_detail_version: 7.4.33
             lsphp_version: lsphp74
             php_tag_version: php74
             oci_version: 2.2.0
+            pdo_oci_version: 1.0
             deprecated: true
         php_extensions:
           - name: "base"
@@ -189,5 +195,6 @@ jobs:
             PHP_VERSION=${{ matrix.php_version.version }}
             PHP_DETAIL_VERSION=${{ matrix.php_version.php_detail_version }}
             OCI_VERSION=${{ matrix.php_version.oci_version }}
+            PDO_OCI_VERSION=${{ matrix.php_version.pdo_oci_version }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
