--- a/.github/workflows/image-build.yaml
+++ b/.github/workflows/image-build.yaml
@@ -65,7 +65,7 @@ jobs:
           tags: ${{ steps.meta-packages.outputs.tags }}
           labels: ${{ steps.meta-packages.outputs.labels }}
           cache-from: type=registry,ref=${{ steps.meta-packages.outputs.tags }}
-          cache-to: type=inline
+          cache-to: type=registry,ref=${{ steps.meta-packages.outputs.tags }}
 
   build-lsphp:
     needs: build-base
@@ -183,4 +183,4 @@ jobs:
             OCI_VERSION=${{ matrix.php_version.oci_version }}
             PDO_OCI_VERSION=${{ matrix.php_version.pdo_oci_version }}
           cache-from: type=registry,ref=${{ steps.meta-packages.outputs.tags }}
-          cache-to: type=inline
+          cache-to: type=registry,ref=${{ steps.meta-packages.outputs.tags }}
