--- a/.github/workflows/image-build.yaml
+++ b/.github/workflows/image-build.yaml
@@ -64,8 +64,8 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta-packages.outputs.tags }}
           labels: ${{ steps.meta-packages.outputs.labels }}
-          cache-from: type=registry,ref=${{ steps.meta-packages.outputs.tags }}
-          cache-to: type=registry,ref=${{ steps.meta-packages.outputs.tags }},mode=max
+          cache-from: type=registry,ref=${{ env.PACKAGE_NAME }}:buildcache
+          cache-to: type=registry,ref=${{ env.PACKAGE_NAME }}:buildcache,mode=max
 
   build-lsphp:
     needs: build-base
@@ -182,5 +182,5 @@ jobs:
             PHP_DETAIL_VERSION=${{ matrix.php_version.php_detail_version }}
             OCI_VERSION=${{ matrix.php_version.oci_version }}
             PDO_OCI_VERSION=${{ matrix.php_version.pdo_oci_version }}
-          cache-from: type=registry,ref=${{ steps.meta-packages.outputs.tags }}
-          cache-to: type=registry,ref=${{ steps.meta-packages.outputs.tags }},mode=max
+          cache-from: type=registry,ref=${{ env.PACKAGE_NAME }}:buildcache
+          cache-to: type=registry,ref=${{ env.PACKAGE_NAME }}:buildcache,mode=max
