Add echo for debug

--- a/docker-lsphp/Dockerfile
+++ b/docker-lsphp/Dockerfile
@@ -141,8 +141,10 @@ COPY ./php.d/20-oci8.ini /usr/local/lsws/${LS_VERSION}/etc/php/${PHP_VERSION}/mo
 COPY ./php.d/20-pdo_oci.ini /usr/local/lsws/${LS_VERSION}/etc/php/${PHP_VERSION}/mods-available/20-pdo_oci.ini
 
 RUN if [ "${PDO_OCI_VERSION}" !== "1.0" && "${PDO_OCI_VERSION}" !== "1" ]; then \
+        echo "pdo_oci version is ${PDO_OCI_VERSION}, install"; \
         yes "instantclient,$LD_LIBRARY_PATH" | pecl install pdo_oci; \
     else \
+        echo "pdo_oci version is ${PDO_OCI_VERSION}, skip install"; \
         rm -f /usr/local/lsws/${LS_VERSION}/etc/php/${PHP_VERSION}/mods-available/20-pdo_oci.ini; \
     fi
 
