--- a/docker-lsphp/Dockerfile
+++ b/docker-lsphp/Dockerfile
@@ -130,7 +130,7 @@ RUN apt-get install -y libaio-dev libaio1 unzip && mkdir -p /usr/oracle && \
 
 ENV LD_LIBRARY_PATH=/usr/oracle/${ORACLE_ZIP_DIR}
 
-RUN if [ "${OCI_VERSION}" !== "1.0" && "${OCI_VERSION}" !== "1" ]; then \
+RUN if [ "${OCI_VERSION}" != "1.0" && "${OCI_VERSION}" != "1" ]; then \
         yes "instantclient,$LD_LIBRARY_PATH" | pecl install oci8-${OCI_VERSION}; \
     else \
         yes "instantclient,$LD_LIBRARY_PATH" | pecl install oci8; \
@@ -140,7 +140,7 @@ COPY ./php.d/20-oci8.ini /usr/local/lsws/${LS_VERSION}/etc/php/${PHP_VERSION}/mo
 
 COPY ./php.d/20-pdo_oci.ini /usr/local/lsws/${LS_VERSION}/etc/php/${PHP_VERSION}/mods-available/20-pdo_oci.ini
 
-RUN if [ "${PDO_OCI_VERSION}" !== "1.0" && "${PDO_OCI_VERSION}" !== "1" ]; then \
+RUN if [ "${PDO_OCI_VERSION}" != "1.0" && "${PDO_OCI_VERSION}" != "1" ]; then \
         echo "pdo_oci version is ${PDO_OCI_VERSION}, install"; \
         yes "instantclient,$LD_LIBRARY_PATH" | pecl install pdo_oci; \
     else \
