--- a/docker-lsphp/Dockerfile
+++ b/docker-lsphp/Dockerfile
@@ -131,8 +131,10 @@ RUN apt-get install -y libaio-dev libaio1 unzip && mkdir -p /usr/oracle && \
 ENV LD_LIBRARY_PATH=/usr/oracle/${ORACLE_ZIP_DIR}
 
 RUN if [ "${OCI_VERSION}" != "1.0" && "${OCI_VERSION}" != "1" ]; then \
+        ldconfig; \
         yes "instantclient,$LD_LIBRARY_PATH" | pecl install oci8-${OCI_VERSION}; \
     else \
+        ldconfig; \
         yes "instantclient,$LD_LIBRARY_PATH" | pecl install oci8; \
     fi
 
@@ -141,6 +143,7 @@ COPY ./php.d/20-oci8.ini /usr/local/lsws/${LS_VERSION}/etc/php/${PHP_VERSION}/mo
 COPY ./php.d/20-pdo_oci.ini /usr/local/lsws/${LS_VERSION}/etc/php/${PHP_VERSION}/mods-available/20-pdo_oci.ini
 
 RUN if [ "${PDO_OCI_VERSION}" != "1.0" && "${PDO_OCI_VERSION}" != "1" ]; then \
+        ldconfig; \
         echo "pdo_oci version is ${PDO_OCI_VERSION}, install"; \
         yes "instantclient,$LD_LIBRARY_PATH" | pecl install pdo_oci; \
     else \
