--- a/docker-lsphp/Dockerfile
+++ b/docker-lsphp/Dockerfile
@@ -115,6 +115,7 @@ ARG ORACLE_VERSION=21.15.0.0.0
 ARG ORACLE_SIMPLE_VERSION=2115000
 ARG ORACLE_ZIP_DIR=instantclient_21_15
 ARG OCI_VERSION=3.4.0
+ARG OCI_PDO_INSTALL=0
 
 # Install Oracle Instant Client
 RUN apt-get install -y libaio-dev libaio1 unzip && mkdir -p /usr/oracle && \
@@ -129,8 +130,6 @@ RUN apt-get install -y libaio-dev libaio1 unzip && mkdir -p /usr/oracle && \
     echo /usr/oracle/${ORACLE_ZIP_DIR} > /etc/ld.so.conf.d/oracle-instantclient.conf && \
     ldconfig
 
-COPY ./php.d/20-pdo_oci.ini /usr/local/lsws/${LS_VERSION}/etc/php/${PHP_VERSION}/mods-available/20-pdo_oci.ini
-
 RUN if [ "${OCI_VERSION}" != "1.0" && "${OCI_VERSION}" != "1" ]; then \
         yes "instantclient,/usr/oracle/${ORACLE_ZIP_DIR}" | pecl install oci8-${OCI_VERSION}; \
         rm -f /usr/local/lsws/${LS_VERSION}/etc/php/${PHP_VERSION}/mods-available/20-pdo_oci.ini; \
@@ -140,6 +139,16 @@ RUN if [ "${OCI_VERSION}" != "1.0" && "${OCI_VERSION}" != "1" ]; then \
     fi
 
 COPY ./php.d/20-oci8.ini /usr/local/lsws/${LS_VERSION}/etc/php/${PHP_VERSION}/mods-available/20-oci8.ini
+
+COPY ./php.d/20-pdo_oci.ini /usr/local/lsws/${LS_VERSION}/etc/php/${PHP_VERSION}/mods-available/20-pdo_oci.ini
+
+RUN if [ "${OCI_PDO_INSTALL}" -eq 1 ]; then \
+        echo 'Installing OCI8 PDO'; \
+        yes "instantclient,/usr/oracle/${ORACLE_ZIP_DIR}" | pecl install pdo_oci; \
+    else \
+        echo 'Skipping . . . Installing OCI8 PDO'; \
+        rm -f /usr/local/lsws/${LS_VERSION}/etc/php/${PHP_VERSION}/mods-available/20-pdo_oci.ini; \
+    fi
 
 # Check PHP Version
 RUN php -v && \
