--- a/.github/workflows/image-build.yaml
+++ b/.github/workflows/image-build.yaml
@@ -33,14 +33,14 @@ jobs:
             lsphp_version: lsphp83
             php_tag_version: latest
             oci_version: "1"
-            oci_pdo_install: 1
+            oci_pdo_install: active
             deprecated: false
           - version: 8.3
             php_detail_version: 8.3.13
             lsphp_version: lsphp83
             php_tag_version: php83
             oci_version: "1"
-            oci_pdo_install: 1
+            oci_pdo_install: active
             deprecated: false
           - version: 8.2
             php_detail_version: 8.2.26
